--- a/src/pages/frivillig.astro
+++ b/src/pages/frivillig.astro
@@ -64,7 +64,15 @@ import ColorSection from "../components/ui/ColorSection.astro"
 	  display: none;
   }
 
+  @media only screen and (min-width: 600px) {
 
+img {
+	display: inline;
+	order: 4;
+	justify-self: center;
+}
+
+}
 
   @media only screen and (min-width: 750px) {
 
