--- a/src/pages/frivillig.astro
+++ b/src/pages/frivillig.astro
@@ -6,7 +6,10 @@ import ColorSection from "../components/ui/ColorSection.astro"
 <BaseLayout title="Bliv frivillig">
 	<div class="Frivillig">
 		<div class="grid-container">
-			<img src="/images/heroimages/three-girls-walking.png" alt="Three girl walking in a park">
+			<video class="border-radius" width="100%" height="auto" autoplay controls muted>
+				<source src="/video/volunteer_video.mp4" type="video/mp4">
+			  Your browser does not support the video tag.
+			  </video>
 			<div>
 
 		<h1 class="primary-header">Bliv frivilig</h1>
@@ -45,7 +48,9 @@ import ColorSection from "../components/ui/ColorSection.astro"
 	</BaseLayout>
 
 	<style>
-
+.border-radius{
+	border-radius: 8px;
+}
 .Frivillig {
 	display: flex;
   flex-direction: column;
