changed hover state on ButtonDonate

--- a/src/components/ui/ButtonDonate.astro
+++ b/src/components/ui/ButtonDonate.astro
@@ -15,10 +15,14 @@ const { extraInfo, link, text, style = "dark", size = "m-small-d-large" } = Astr
   padding: 20px;
   background-color: var(--color-off-white);
   border-radius: 8px 8px 0 0;
+  border: 2px solid var(--color-purple);
 }
 
 .btn:hover {
     background-color: var(--color-purple);
+    transition: background-color 0.2s ease-in;;
+    
+
 }
 
 .selected {
