made component for employees

--- a/src/pages/meettheteam.astro
+++ b/src/pages/meettheteam.astro
@@ -6,11 +6,9 @@ import BaseLayout from "../layouts/BaseLayout.astro"
 
     <section class="BreadCrumbSection">
         <ul class="breadcrumblinks"> 
-            <li><a href="main.html">Pigeunivers</a></li>
+            <li><a href="main.html">Om Os</a></li>
             <span>/</span>
-           <li> <a href="">Brevkassen </a></li>
-           <span>/</span>
-          <li>  <a href="">Brev</a></li>
+           <li> <a href="">Teamet bag Girltalk</a></li>
         </ul>
      
      <a class="tilbagesection" href="">
