--- a/src/pages/meettheteam.astro
+++ b/src/pages/meettheteam.astro
@@ -1,5 +1,6 @@
 ---
-import BaseLayout from "../layouts/BaseLayout.astro"
+import BaseLayout from "../layouts/BaseLayout.astro";
+import EmployeeCard from "../components/cards/EmployeeCard.astro";
 ---
 
 <BaseLayout title="Mød Teamet">
@@ -18,6 +19,8 @@ import BaseLayout from "../layouts/BaseLayout.astro"
      
      </section>
      <div class="moedteametlayout">
+<EmployeeCard link="images/meettheteam/AnnaBjerre.jpg" name="Anna Bjerre" title="Direktør" email="Anna@Girltalk.dk"></EmployeeCard>
+
 </div>
 
 </BaseLayout>
