--- a/src/components/cards/EmployeeCard.astro
+++ b/src/components/cards/EmployeeCard.astro
@@ -8,7 +8,7 @@ const { link, alt, name, email, title } = Astro.props;
 <img src={link} alt={alt}>
 <p>{name}</p>
 <p>{title}</p>
-<p>{email}</p>
+<a href="mailto:"{email}>{email}</a>
 </div>
 
 <style>
@@ -25,7 +25,7 @@ div.EmployeeCard {
     border-radius: 8px;
 }
 
-@media only screen and (min-width: 900px){
+@media only screen and (min-width: 600px){
     .EmployeeCard {
     width: 310px;
 }
