--- a/src/pages/meettheteam.astro
+++ b/src/pages/meettheteam.astro
@@ -19,19 +19,78 @@ import EmployeeCard from "../components/cards/EmployeeCard.astro";
      
      </section>
      <div class="moedteametlayout">
-<EmployeeCard link="images/meettheteam/AnnaBjerre.jpg" name="Anna Bjerre" title="Direktør" email="Anna@Girltalk.dk"></EmployeeCard>
 
+    	<h2 class="sub-header-underlined">Ledelse</h2>
+<div class="employeesection">
+<EmployeeCard link="images/meettheteam/AnnaBjerre.jpg" name="Anna Bjerre" title="Direktør" email="Anna@Girltalk.dk"></EmployeeCard>
+<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
 </div>
+
+<h2 class="sub-header-underlined">Teamledere - Udvidet ledesle</h2>
+<div class="employeesection">
+<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+</div>
+
+<h2 class="sub-header-underlined">Sekretariat København</h2>
+<div class="employeesection">
+<EmployeeCard link="images/meettheteam/AnnaBjerre.jpg" name="Anna Bjerre" title="Direktør" email="Anna@Girltalk.dk"></EmployeeCard>
+<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+</div>
+<h2 class="sub-header-underlined">Sekretariat Odense</h2>
+<div class="employeesection">
+    <EmployeeCard link="images/meettheteam/AnnaBjerre.jpg" name="Anna Bjerre" title="Direktør" email="Anna@Girltalk.dk"></EmployeeCard>
+    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+</div>
+<h2 class="sub-header-underlined">Sekretariat Aalborg</h2>
+<div class="employeesection">
+    <EmployeeCard link="images/meettheteam/AnnaBjerre.jpg" name="Anna Bjerre" title="Direktør" email="Anna@Girltalk.dk"></EmployeeCard>
+    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+</div>
+
 
 </BaseLayout>
 
 <style>
+
+ /*BREADCRUMBS*/    
         .BreadCrumbSection{
 display: flex;
 gap: 5px;
 flex-direction: column;
 align-self: flex-start;
 padding-top: 30px;
+margin-left: 20px;
     }
 
     .BreadCrumbSection a{
@@ -49,8 +108,41 @@ padding-top: 30px;
         gap: 10px;
     }
 
+    /*GENERAL*/ 
     .moedteametlayout{
         display: flex;
+        margin: 30px 50px;
+        gap: 40px;
+        flex-direction: column;
         justify-content: center;
     }
+ 
+    /*SECTIONS*/ 
+    .sub-header-underlined{
+font-family: var(--font-display);
+font-weight: var(--font-weight-semibold);
+font-size: var(font-size-large);
+align-self: flex-start;
+border-bottom: 2px solid var(--color-black-ish);
+width: 100%;
+margin-bottom: 20px;
+}
+
+   .employeesection{
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+   }
+
+   @media only screen and (min-width: 400px){
+.moedteametlayout{
+    margin: 40px 80px;
+}
+   }
+
+   @media only screen and (min-width: 900px){
+.moedteametlayout{
+    margin: 40px 140px;
+}
+   }
 </style>
