--- a/src/components/cards/EmployeeCard.astro
+++ b/src/components/cards/EmployeeCard.astro
@@ -20,6 +20,10 @@ div.EmployeeCard {
     height:auto;
 }
 
+.EmployeeCard p{
+    max-width: 200px;
+}
+
 .EmployeeCard img{
     width: 100%;
     border-radius: 8px;
@@ -27,11 +31,12 @@ div.EmployeeCard {
 
 @media only screen and (min-width: 600px){
     .EmployeeCard {
-    width: 310px;
+    width: 250px;
 }
 
 .EmployeeCard img{
     height: 300px;
+    object-fit: cover;
 }
 }
 
