--- a/src/pages/meettheteam.astro
+++ b/src/pages/meettheteam.astro
@@ -26,56 +26,33 @@ import EmployeeCard from "../components/cards/EmployeeCard.astro";
 <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
 </div>
 
-<h2 class="sub-header-underlined">Teamledere - Udvidet ledesle</h2>
+<h2 class="sub-header-underlined">Teamledere - Udvidet ledelse</h2>
 <div class="employeesection">
-<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+<EmployeeCard link="images/meettheteam/NannaBohmann.webp" name="Nanna Bohmann" title="Teamleder, Kommunikation og Engagement" email="Nanna@Girltalk.dk"></EmployeeCard>
+<EmployeeCard link="images/meettheteam/MarianneObed.webp" name="Marianne Obed Madsen" title="Teamleder, Rådgivningen" email="Marianne@Girltalk.dk"></EmployeeCard>
+<EmployeeCard link="images/meettheteam/DitteWagner.webp" name="Ditte Wagner" title="Teamleder, Lokale Indsatser" email="Ditte@Girltalk.dk"></EmployeeCard>
+
 </div>
 
 <h2 class="sub-header-underlined">Sekretariat København</h2>
 <div class="employeesection">
-<EmployeeCard link="images/meettheteam/AnnaBjerre.jpg" name="Anna Bjerre" title="Direktør" email="Anna@Girltalk.dk"></EmployeeCard>
-<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-<EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+<EmployeeCard link="images/meettheteam/randomemployee1.jpg" name="Dorte Sørensen" title="Administrativ Koordinator" email="Dorte@Girltalk.dk"></EmployeeCard>
+<EmployeeCard link="images/meettheteam/randomemployee4.jpg" name="Gitte Solberg Perregaard" title="Økonomi- og Administrationskonsulent" email="Gitte@Girltalk.dk"></EmployeeCard>
+<EmployeeCard link="images/meettheteam/randomemployee3.jpg" name="Siri Madsen" title="Rådgivningskorrdinator" email="Siri@Girltalk.dk"></EmployeeCard>
+<EmployeeCard link="images/meettheteam/randomemployee5.jpg" name="Katrine Bjerre" title="Rådgivnings- og frivilligkoordinator" email="Katrine.Bjerre@Girltalk.dk"></EmployeeCard>
+<EmployeeCard link="images/meettheteam/AmalieStender.jpg" name="Amalie Stender" title="Kommunikation og engagement" email="Amalie@Girltalk.dk"></EmployeeCard>
+<EmployeeCard link="images/meettheteam/MathildeMGraulund.jpg" name="Mathilde Magrethe Graulund" title="Kommunikation og engagement" email="Mathilde@Girltalk.dk"></EmployeeCard>
 </div>
 <h2 class="sub-header-underlined">Sekretariat Odense</h2>
 <div class="employeesection">
-    <EmployeeCard link="images/meettheteam/AnnaBjerre.jpg" name="Anna Bjerre" title="Direktør" email="Anna@Girltalk.dk"></EmployeeCard>
-    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+    <EmployeeCard link="images/meettheteam/MetteRafn.jpg" name="Mette Rafn" title="kommunikation og Engagement" email="Anna@Girltalk.dk"></EmployeeCard>
+    <EmployeeCard link="images/meettheteam/AnetteBreinholt.jpg" name="Anette Breinholt" title="Projektkonsulent, Rådgivningerne" email="Majbritt@Girltalk.dk"></EmployeeCard>
 </div>
 <h2 class="sub-header-underlined">Sekretariat Aalborg</h2>
 <div class="employeesection">
-    <EmployeeCard link="images/meettheteam/AnnaBjerre.jpg" name="Anna Bjerre" title="Direktør" email="Anna@Girltalk.dk"></EmployeeCard>
-    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
-    <EmployeeCard link="images/meettheteam/MajbritBay.jpg" name="Majbritt Bay" title="Souschef" email="Majbritt@Girltalk.dk"></EmployeeCard>
+    <EmployeeCard link="images/meettheteam/MaikeRitter.jpg" name="Maike Ritter" title="Studentermedarbejder, Rådgivningerne" email="Anna@Girltalk.dk"></EmployeeCard>
+    <EmployeeCard link="images/meettheteam/randomemployee2.jpg" name="Emilie Espholm" title="Projektkoordinator, Lokale Indsatser" email="Emilie@Girltalk.dk"></EmployeeCard>
+
 </div>
 
 
