fixed broken links

--- a/src/pages/meettheteam.astro
+++ b/src/pages/meettheteam.astro
@@ -9,10 +9,10 @@ import EmployeeCard from "../components/cards/EmployeeCard.astro";
         <ul class="breadcrumblinks"> 
             <li><a href="main.html">Om Os</a></li>
             <span>/</span>
-           <li> <a href="">Teamet bag Girltalk</a></li>
+           <li> <a href="/meettheteam.html">Teamet bag Girltalk</a></li>
         </ul>
      
-     <a class="tilbagesection" href="">
+     <a class="tilbagesection" href="/om-os.html">
          <img src="images/gobackarrow.svg" alt="arrow">
          Tilbage
      </a>
