--- a/src/pages/om-os.astro
+++ b/src/pages/om-os.astro
@@ -110,7 +110,7 @@ import Button from "../components/ui/Button.astro";
       hex="#ffe4ee"
       title="Hvem arbejder i GirlTalk?"
       text="Mød teamet her"
-      link="/"
+      link="/meettheteam.html"
     >
       <p slot="description">
           GirlTalks sekretariat er fordelt over tre lokalafdelinger i hhv.
