--- a/src/pages/medier.astro
+++ b/src/pages/medier.astro
@@ -5,6 +5,7 @@ import SearchBar from "../components/ui/SearchBar.astro"
 import Dropdown from "../components/ui/Dropdown.astro"
 ---
 <GirlsUniLayout title="Pigeunivers">
+	<div class="scroll-up">↑</div>
 <div class="medierlayout">
 	<h1 class="primary-header">Vidensunivers</h1>
 <div class="search-div">
@@ -28,7 +29,7 @@ import Dropdown from "../components/ui/Dropdown.astro"
 <div class="medier-podcast-section">
 	<a href="#"><img src="images/articleimages/podcastimage.jpg" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber"></a>
 	</div>
-<div class="medier-second-section">
+<div class="medier-article-section" id="venskaber-og-familie">
 	<h2 class="sub-header-underlined">Tema: Venskaber og Familie</h2>
 	<div class="medier-second-grid">
 	<section class="mediumarticlecard">
@@ -43,8 +44,9 @@ import Dropdown from "../components/ui/Dropdown.astro"
 <div class="medier-podcast-section">
 <a href="#"><img src="images/articleimages/podcastimage.jpg" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber"></a>
 </div>
-<div class="medier-fourth-section">
-	<h2 class="sub-header-underlined">Tema: Venskaber og Familie</h2>
+<div class="medier-article-section" id="krop-og-sex">
+	<h2 class="sub-header-underlined">Tema: Krop og Sex
+	</h2>
 	<div class="medier-fourth-grid">
 	<section class="mediumarticlecard">
 		<a class="hoverstate" href="#"><img src="images/articleimages/bananaarticle.png" alt="Artikel hvordan onanerer man?"></a>
@@ -55,12 +57,146 @@ import Dropdown from "../components/ui/Dropdown.astro"
 	</section>
 	</div>
 </div>
+	<div class="medier-podcast-section">
+		<a href="/specificartclepage.astro"><img src="images/articleimages/podcastimage.jpg" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber"></a>
+		</div>
 
-
+		<div class="medier-article-section" id="selvvaerd">
+			<h2 class="sub-header-underlined">Tema: Selvværd
+			</h2>
+			<div class="medier-fourth-grid">
+			<section class="mediumarticlecard">
+				<a class="hoverstate" href="#"><img src="images/articleimages/bananaarticle.png" alt="Artikel hvordan onanerer man?"></a>
+			</section>
+			<section class="double-articlecard-second">
+				<a href="#">	<ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.jpg" /></a>
+					<a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.jpg" /></a>
+			</section>
+			</div>
+		</div>
+			<div class="medier-podcast-section">
+				<a href="/specificartclepage.astro"><img src="images/articleimages/podcastimage.jpg" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber"></a>
+				</div>
+				<div class="medier-article-section kaerlighed" id="kaerlighed">
+					<h2 class="sub-header-underlined">Tema: Kærlighed
+					</h2>
+					<div class="medier-fourth-grid">
+					<section class="mediumarticlecard">
+						<a class="hoverstate" href="#"><img src="images/articleimages/bananaarticle.png" alt="Artikel hvordan onanerer man?"></a>
+					</section>
+					<section class="double-articlecard-second">
+						<a href="#">	<ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.jpg" /></a>
+							<a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.jpg" /></a>
+					</section>
+					</div>
+				</div>
+					<div class="medier-podcast-section">
+						<a href="/specificartclepage.astro"><img src="images/articleimages/podcastimage.jpg" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber"></a>
+						</div>
+						<div class="medier-article-section" id="trivsel">
+							<h2 class="sub-header-underlined">Tema: Trivsel
+							</h2>
+							<div class="medier-fourth-grid">
+							<section class="mediumarticlecard">
+								<a class="hoverstate" href="#"><img src="images/articleimages/bananaarticle.png" alt="Artikel hvordan onanerer man?"></a>
+							</section>
+							<section class="double-articlecard-second">
+								<a href="#">	<ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.jpg" /></a>
+									<a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.jpg" /></a>
+							</section>
+							</div>
+						</div>
+							<div class="medier-podcast-section">
+								<a href="/specificartclepage.astro"><img src="images/articleimages/podcastimage.jpg" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber"></a>
+								</div>
+								<div class="medier-article-section" id="skole-og-uddannelse">
+									<h2 class="sub-header-underlined">Tema: Skole og uddannelse
+									</h2>
+									<div class="medier-fourth-grid">
+									<section class="mediumarticlecard">
+										<a class="hoverstate" href="#"><img src="images/articleimages/bananaarticle.png" alt="Artikel hvordan onanerer man?"></a>
+									</section>
+									<section class="double-articlecard-second">
+										<a href="#">	<ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.jpg" /></a>
+											<a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.jpg" /></a>
+									</section>
+									</div>
+								</div>
+									<div class="medier-podcast-section">
+										<a href="/specificartclepage.astro"><img src="images/articleimages/podcastimage.jpg" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber"></a>
+										</div>
+										<div class="medier-article-section" id="andet">
+											<h2 class="sub-header-underlined">Tema: Andet
+											</h2>
+											<div class="medier-fourth-grid">
+											<section class="mediumarticlecard">
+												<a class="hoverstate" href="#"><img src="images/articleimages/bananaarticle.png" alt="Artikel hvordan onanerer man?"></a>
+											</section>
+											<section class="double-articlecard-second">
+												<a href="#">	<ArticleCard header="Kropsidealer - Hvordan påvirker de os?" category="Krop og sex" link="images/articleimages/redbluegirlarticle.jpg" /></a>
+													<a href="#"><ArticleCard header="Hvordan onanerer man?" category="Krop og sex" link="images/articleimages/banana.jpg" /></a>
+											</section>
+											</div>
+										</div>
+											<div class="medier-podcast-section">
+												<a href="/specificartclepage.astro"><img src="images/articleimages/podcastimage.jpg" alt="Lyt til den nyeste podcast med Mathilde. Emnet er venskaber"></a>
+												</div>
 </div>
 	</GirlsUniLayout>
 
+	<script>
+		const scrollUp = document.querySelector(".scroll-up")
+const filterButtons = document.querySelectorAll("a.color");
+  const colorSections = document.querySelectorAll(".ColorSection");
+  const dropdownOptions = document.querySelectorAll("select")
+
+  const buttonsArray = [...filterButtons];
+  const filteredArray = [...colorSections];
+  const optionsArray = [...dropdownOptions]
+
+  buttonsArray.forEach((button) => {
+    button.addEventListener("click", () => {
+      if (buttonsArray.length) {
+        buttonsArray.forEach((button) => {
+          button.classList.remove("selected");
+        });
+      }
+
+      if (filteredArray.length) {
+        filteredArray.forEach((filteredElement) => {
+          if (filteredElement.classList.contains("none")) {
+            filteredElement.classList.remove("none");
+          }
+        });
+      }
+
+      button.classList.toggle("selected");
+
+    });
+  });
+
+  document.addEventListener("scroll", () => {
+	if (document.body.scrollTop > 200 || document.documentElement.scrollTop > 200) {
+    scrollUp.style.display = "block";
+  } else {
+    scrollUp.style.display = "none";
+  }
+  });
+
+  scrollUp.addEventListener("click", () => {
+	window.scrollTo(0,0)
+  })
+	</script>
+
+
 	<style>
+		.scroll-up {
+			display: block;
+		position: fixed;
+		bottom: 10px;
+		right: 10px;
+		scale: 2;
+	}
 /*GENERAL*/
 .medierlayout{
 	display: flex;
@@ -83,18 +219,26 @@ import Dropdown from "../components/ui/Dropdown.astro"
 	padding-bottom: 40px;
 }
 
+a {
+	transition: .1s ease-in;
+}
+
+.hoverstate img {
+	transition: .1s ease-in;
+}
+
 .medierlayout a:hover {
-	scale: 1.05;
+	transform: scale(1.04);
 }
 
 .hoverstate:hover img{
-	scale: 1.05;
+	transform: scale(1.04);
 }
 
 /*FIRST SECTION*/ 		
 		.medier-first-section{
-			display: grid
-grid-template-rows: 7fr 3fr;
+			display: grid;
+
 			gap: 20px;
 		}
 
