--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -71,6 +71,10 @@
   --z-index--1: -1;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: var(--font-display);
   background-color: var(--color-off-white);
