added mobile filter on medier

--- a/src/components/ui/Dropdown.astro
+++ b/src/components/ui/Dropdown.astro
@@ -7,13 +7,13 @@ import Button from "./Button.astro";
     <p class="label-text light-text hidetext">Filtrér efter tema</p>    
         <div class="desktopfilter">
           <Button size="m-extra-small-d-medium" style="color" text="Alle" />
-          <Button size="m-extra-small-d-medium" style="color" text="Venskaber og familie" link="#venskaber-og-familie" />
-          <Button size="m-extra-small-d-medium" style="color" text="Krop og sex" link="#krop-og-sex" />
-          <Button size="m-extra-small-d-medium" style="color" text="Selvværd" link="#selvvaerd" />
-          <Button size="m-extra-small-d-medium" style="color" text="Kærlighed" link="#kaerlighed" />
-          <Button size="m-extra-small-d-medium" style="color" text="Trivsel" link="#trivsel" />
-          <Button size="m-extra-small-d-medium" style="color" text="Skole og uddannelse" link="#skole-og-uddannelse" />
-          <Button size="m-extra-small-d-medium" style="color" text="Andet" link="#andet" />
+          <Button size="m-extra-small-d-medium" style="color" text="Venskaber og familie" />
+          <Button size="m-extra-small-d-medium" style="color" text="Krop og sex" />
+          <Button size="m-extra-small-d-medium" style="color" text="Selvværd" />
+          <Button size="m-extra-small-d-medium" style="color" text="Kærlighed" />
+          <Button size="m-extra-small-d-medium" style="color" text="Trivsel" />
+          <Button size="m-extra-small-d-medium" style="color" text="Skole og uddannelse" />
+          <Button size="m-extra-small-d-medium" style="color" text="Andet" />
         </div>
   
 </div>
@@ -26,8 +26,8 @@ import Button from "./Button.astro";
           <option value="alle">Vælg tema</option>
           <option value="venskaber_og_familie">Venskaber og familie</option>
           <option value="krop_og_sex">Krop og sex</option>
-          <option value="selvvaerd">Selvværd</option>
-          <option value="kaerlighed">Kærlighed</option>
+          <option value="selvværd">Selvværd</option>
+          <option value="kærlighed">Kærlighed</option>
           <option value="trivsel">Trivsel</option>
           <option value="skole_og_uddannelse">Skole og uddannelse</option>
           <option value="andet">Andet</option>
